# ANN_PREDICTOR

./: .dockerignore  Dockerfile  Pipfile  README.md  predict.py  pyproject.toml  reflection_coefficient_predictor.py  requirements.txt  streamlit_app.py  train.py  utils.py
data/: dataset.csv
models/: scaler.joblib  sklearn_mlp.joblib
outputs/: sample_predictions.csv
